Support build and testing with Java 16+ (#935)